ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_07.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--stanislaus--bishop-and-martyr\", \"st--stanislaus\"]"
expression: s.0
---
2025-05-07
Vespers of St. Stanislaus, Bishop and Martyr:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
