ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_09.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--gregory-nazianzen--bishop-and-confessor-and-doctor-of-the-church\", \"st--gregory-nazianzen\"]"
expression: s.0
---
2025-05-09
Vespers of St. Gregory Nazianzen, Bishop and Confessor and Doctor of the Church:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Proper
  Collect:     Proper
