ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_10.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-iii-after-easter-sunday\", \"dominica-of-eastertide\"]"
expression: s.0
---
2025-05-10
First Vespers of Dominica III after Easter Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
