ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_12.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"ss--nereus--achilleus--domitilla-and-pancras--virgin-and-martyrs\", \"ss--nereus\"]"
expression: s.0
---
2025-05-12
Vespers of Ss. Nereus, Achilleus, Domitilla and Pancras, Virgin and Martyrs:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Martyrs
  Hymn:        Common of Martyrs
  Verse:       Common of Martyrs
  Magnificat:  Common of Martyrs
  Collect:     Proper
