ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_14.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-iv-week-iv-of-eastertide\", \"feria-of-eastertide\"]"
expression: s.0
---
2025-05-14
Vespers of Feria IV week IV of Eastertide:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Psalter (Ordinary of Eastertide)
  Hymn:        Psalter (Ordinary of Eastertide)
  Verse:       Psalter (Ordinary of Eastertide)
  Magnificat:  Psalter (Ordinary of Eastertide)
  Collect:     of Sunday
