ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_15.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--john-baptist-de-la-salle--confessor\", \"st--john-baptist-de-la-salle\"]"
expression: s.0
---
2025-05-15
Vespers of St. John Baptist de la Salle, Confessor:
Vespers:
  Antiphons:   Psalter (Ordinary of Eastertide)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
