ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_05_17.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"dominica-iv-after-easter-sunday\", \"dominica-of-eastertide\"]"
expression: s.0
---
2025-05-17
First Vespers of Dominica IV after Easter Sunday:
Vespers:
  Antiphons:   Proper
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
